(lang dune 3.4)

(name dumbtt)

(generate_opam_files true)

(source
 (github dannypsnl/dumbtt))

(authors "L\195\174m Ts\195\186-thu\195\160n")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://github.com/dannypsnl/dumbtt)

(package
 (name dumbtt)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
